# sqlite3cppm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yaml  ci.yaml
cmake/: CMakeCommonPresets.json  CMakePresets-Darwin.json  CMakePresets-Windows.json  CodeCoverage.cmake  config.cmake.in
include/: sqlite3cppm.cppm
scripts/: collect_llvm_coverage.sh
source/: sqlite3cppm.cppm
tests/: CMakeLists.txt  sqlite3cppm_test.cpp
